fix lỗi textView nằm trên image bị lòe màu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="adapter"
-            type="com.baokiin.mangatoon.ui.adapter.ViewPageAdapter" />
+            type="com.baokiin.mangatoon.adapter.ViewPageAdapter" />
     </data>
 
     <FrameLayout
