--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -10,7 +10,8 @@
             type="com.baokiin.mangatoon.ui.detail.DetailViewModel" />
         <variable
             name="adapter"
-            type="com.baokiin.mangatoon.ui.adapter.ViewPageAdapter" />
+            type="com.baokiin.mangatoon.adapter.ViewPageAdapter" />
+       />
     </data>
 
     <androidx.constraintlayout.motion.widget.MotionLayout
@@ -21,17 +22,29 @@
         android:clickable="true"
         android:focusable="true"
         app:layoutDescription="@xml/fragment_detail_xml_constraintlayout3_scene">
-
-        <ImageView
+        <FrameLayout
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:background="@drawable/image_title"
-            android:profileImage="@{viewmodel.data.thumb}"
-            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            >
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/manhua"
+                android:profileImage="@{viewmodel.data.thumb}"
+                android:scaleType="fitXY"
+                />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/background_image" />
+        </FrameLayout>
+
 
         <TextView
             android:id="@+id/btnBack"
@@ -60,12 +73,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/background_name_manga"
+            android:layout_marginBottom="20dp"
             android:fontFamily="@font/gilroy_bold"
             android:maxWidth="300dp"
             android:paddingHorizontal="10dp"
             android:text="@{viewmodel.data.title}"
+
             android:textColor="#fff"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/tabLayoutDetailFragment"
@@ -74,7 +87,7 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayoutDetailFragment"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:layout_gravity="end"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintEnd_toEndOf="parent"
