--- a/app/src/main/res/layout/layout_genre.xml
+++ b/app/src/main/res/layout/layout_genre.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="adapterGener"
-            type="com.baokiin.mangatoon.ui.adapter.ItemGenreHomeAdapter" />
+            type="com.baokiin.mangatoon.adapter.ItemGenreHomeAdapter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
