--- a/app/src/main/res/layout/layout_manhua_home.xml
+++ b/app/src/main/res/layout/layout_manhua_home.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="adapterManhua"
-            type="com.baokiin.mangatoon.ui.adapter.ItemMangaAdapter"
+            type="com.baokiin.mangatoon.adapter.ItemMangaAdapter"
         />
     </data>
 
