--- a/app/src/main/res/layout/layout_popular_home.xml
+++ b/app/src/main/res/layout/layout_popular_home.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="adapterPopular"
-            type="com.baokiin.mangatoon.ui.adapter.ItemMangaAdapter" />
+            type="com.baokiin.mangatoon.adapter.ItemMangaAdapter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
