--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -5,9 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewmodel"
             type="com.baokiin.mangatoon.ui.detail.DetailViewModel" />
+
         <variable
             name="adapter"
             type="com.baokiin.mangatoon.adapter.ItemGenreDescriptionAdapter" />
@@ -16,76 +18,95 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.core.widget.NestedScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/button2"
+            app:layout_constraintBottom_toTopOf="@+id/btnRead"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            >
+            app:layout_constraintTop_toTopOf="parent">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <FrameLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
-                    android:text="@{viewmodel.data.status}"
-                    android:textColor="@color/green_color"
-                    android:textSize="25sp" />
-                <TextView
+                    android:layout_marginEnd="20dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start|center"
+                        android:text="@{viewmodel.data.status}"
+                        android:textColor="@color/green_color"
+                        android:textSize="25sp" />
+
+                    <RatingBar
+                        android:id="@+id/ratingBar"
+                        style="@style/Widget.AppCompat.RatingBar.Indicator"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end|center"
+                        android:numStars="5" />
+                </FrameLayout>
+
+                <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{viewmodel.data.author}"
-                    android:textSize="20dp"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:drawablePadding="10dp"
-                    android:drawableStart="@drawable/ic_account"
-                    android:layout_marginStart="20dp"
-                    />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:orientation="horizontal"
                     android:layout_marginHorizontal="20dp"
-                    >
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
+
                     <TextView
                         android:id="@+id/text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="25sp"
                         android:maxLines="4"
                         android:text="@{viewmodel.data.synopsis}"
-                        />
+                        android:textSize="25sp" />
+
                     <TextView
                         android:id="@+id/btnMore"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="end|bottom"
+                        android:background="@color/text_color_white"
                         android:text="...more"
                         android:textColor="@color/green_color"
-                        android:textSize="25sp"
-                        />
+                        android:textSize="25sp" />
 
-                </LinearLayout>
+                </FrameLayout>
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="20dp"
-                    android:adapter="@{adapter}"
-                    />
+                    android:adapter="@{adapter}" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:drawableStart="@drawable/ic_account"
+                    android:drawablePadding="10dp"
+                    android:gravity="center"
+                    android:text="@{viewmodel.data.author}"
+                    android:textSize="20dp" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
+
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnRead"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
@@ -93,11 +114,13 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/background_btn_facebook"
             android:text="Read"
+            android:textAllCaps="false"
             android:textColor="@color/text_color_white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
