--- a/app/src/main/res/xml/fragment_detail_xml_constraintlayout3_scene.xml
+++ b/app/src/main/res/xml/fragment_detail_xml_constraintlayout3_scene.xml
@@ -20,8 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_editor_absoluteY="255dp"
-            motion:layout_constraintBottom_toTopOf="@+id/tabLayoutDetailFragment"
+            motion:layout_constraintBottom_toTopOf="@+id/textView"
             android:layout_marginBottom="20dp">
             <CustomAttribute
                 motion:attributeName="maxLines"
@@ -38,6 +37,32 @@
                 motion:attributeName="backgroundColor"
                 motion:customColorValue="@color/text_color_white" />
         </Constraint>
+        <Constraint
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            motion:layout_constraintBottom_toTopOf="@+id/tabLayoutDetailFragment"
+            android:layout_marginStart="20dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:visibility="visible" />
+        <Constraint
+            android:id="@+id/textV"
+            motion:layout_constraintStart_toEndOf="@id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            motion:layout_constraintBottom_toTopOf="@+id/tabLayoutDetailFragment"
+            android:layout_marginStart="10dp"
+            android:visibility="visible" />
+        <Constraint
+            android:id="@+id/btnHeart"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            motion:layout_constraintBottom_toTopOf="@+id/tabLayoutDetailFragment"
+            android:layout_marginEnd="20dp"
+            android:visibility="visible" />
 
 
     </ConstraintSet>
@@ -81,6 +106,32 @@
             motion:layout_constraintBottom_toTopOf="@+id/tabLayoutDetailFragment"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone" />
+        <Constraint
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            motion:layout_constraintBottom_toTopOf="@+id/tabLayoutDetailFragment"
+            android:layout_marginStart="20dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone" />
+        <Constraint
+            android:id="@+id/textV"
+            motion:layout_constraintStart_toEndOf="@id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            motion:layout_constraintBottom_toTopOf="@+id/tabLayoutDetailFragment"
+            android:layout_marginStart="10dp"
+            android:visibility="gone" />
+        <Constraint
+            android:id="@+id/btnHeart"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            motion:layout_constraintBottom_toTopOf="@+id/tabLayoutDetailFragment"
+            android:layout_marginEnd="20dp"
             android:visibility="gone" />
 
     </ConstraintSet>
