--- a/app/src/main/res/layout/item_chapter.xml
+++ b/app/src/main/res/layout/item_chapter.xml
@@ -13,19 +13,19 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:background="#fff"
-        android:layout_marginVertical="5dp"
+        android:layout_marginBottom="1dp"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_margin="20dp"
+            android:fontFamily="@font/gilroy_medium"
             android:text_custom="@{data.chapter_title}"
-            android:fontFamily="@font/gilroy_bold"
             android:textColor="#000"
             android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
