--- a/app/src/main/res/layout/fragment_detail_gener.xml
+++ b/app/src/main/res/layout/fragment_detail_gener.xml
@@ -74,6 +74,30 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/contentShimmerDetailGener"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:shimmer_duration="1000"
+
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <include layout="@layout/templace_item_manga_search" />
+                <include layout="@layout/templace_item_manga_search" />
+                <include layout="@layout/templace_item_manga_search" />
+            </LinearLayout>
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
