--- a/app/src/main/res/layout/layout_manhua_home.xml
+++ b/app/src/main/res/layout/layout_manhua_home.xml
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/btnManhua"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
@@ -60,7 +60,7 @@
                 android:id="@+id/contentShimmerManhua"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:shimmer_duration="800"
+                app:shimmer_duration="1000"
 
                 >
                 <androidx.core.widget.NestedScrollView
