--- a/app/src/main/res/layout/layout_manhwa_home.xml
+++ b/app/src/main/res/layout/layout_manhwa_home.xml
@@ -27,7 +27,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/btnManhwa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
@@ -58,7 +58,7 @@
                 android:id="@+id/contentShimmerManhwa"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:shimmer_duration="800"
+                app:shimmer_duration="1000"
 
                 >
                 <androidx.core.widget.NestedScrollView
