--- a/app/src/main/res/layout/fragment_detail_chapter.xml
+++ b/app/src/main/res/layout/fragment_detail_chapter.xml
@@ -46,6 +46,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:id="@+id/btnBack"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
