--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,15 +8,28 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     tools:context=".ui.activity.LoginActivity">
-
-    <ImageView
+    <FrameLayout
         android:layout_weight="2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#fff"
-        android:scaleType="fitXY"
-        android:src="@drawable/image_title"
-        />
+        >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/image_title"
+            />
+        <TextView
+            android:id="@+id/btnClose"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_back"
+            />
+    </FrameLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
