--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardViewTab"
                 android:layout_width="0dp"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="wrap_content"
                 app:cardElevation="20dp"
                 app:cardCornerRadius="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -43,7 +43,8 @@
                     android:id="@+id/tabLayout"
                     android:layout_width="match_parent"
                     android:cropToPadding="true"
-                    app:tabIconTint="#000"
+                    app:tabIconTint="@drawable/icon_color_selector"
+                    app:tabSelectedTextColor="@color/green_color"
                     android:layout_height="match_parent"/>
             </androidx.cardview.widget.CardView>
 
