--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -6,70 +6,102 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.mine.MineFragment">
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
-        app:cardCornerRadius="40dp"
-        app:cardElevation="0dp"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/backgroundAccount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#fff"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imgavatarFragment"
-            android:scaleType="centerCrop"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-             />
-    </androidx.cardview.widget.CardView>
-    <TextView
-        android:id="@+id/txtName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:text="Hồ Minh Quốc Bảo"
-        android:textColor="#000"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
-        app:layout_constraintStart_toEndOf="@+id/cardView2"
-        app:layout_constraintTop_toTopOf="@+id/cardView2" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="30dp"
+            app:cardCornerRadius="40dp"
+            app:cardElevation="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/imgavatarFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/txtName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:drawableEnd="@drawable/ic_edit"
+            android:drawablePadding="10dp"
+            android:fontFamily="@font/gilroy_bold"
+            android:text="Hồ Minh Quốc Bảo"
+            android:textColor="#000"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toTopOf="@+id/txtMail"
+            app:layout_constraintStart_toEndOf="@+id/cardView2"
+            app:layout_constraintTop_toTopOf="@+id/cardView2" />
+
+        <TextView
+            android:id="@+id/txtMail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:text="Baokiinkk@gmail.com"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
+            app:layout_constraintStart_toEndOf="@+id/cardView2"
+            app:layout_constraintTop_toBottomOf="@+id/txtName" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:background="#fff"
+        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2">
+        app:layout_constraintTop_toBottomOf="@+id/backgroundAccount">
 
         <TextView
             android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:drawableStart="@drawable/ic_coin"
+            android:drawablePadding="50dp"
+            android:fontFamily="@font/gilroy_bold"
             android:text="50"
+            android:textColor="@color/green_color"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView15"
-            app:layout_constraintEnd_toStartOf="@+id/textView15" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/textView15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
-            android:layout_marginEnd="100dp"
             android:text="Xu"
+            android:textColor="@color/green_color"
             android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView14"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnNap"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
@@ -77,7 +109,10 @@
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="30dp"
             android:background="@drawable/background_btn_green"
-            android:text="Button"
+            android:text="Nạp xu"
+            android:textAllCaps="false"
+            android:textSize="20sp"
+            android:textColor="@color/text_color_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -91,15 +126,19 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="15dp"
-            android:background="@drawable/background_btn_scroll"
-            android:text="Button"
-            app:layout_constraintEnd_toStartOf="@+id/button3"
+            android:background="@drawable/background_btn_search"
+            android:text="History"
+            android:textSize="20sp"
+            android:textAllCaps="false"
+            android:textColor="@color/green_color"
+            app:layout_constraintEnd_toStartOf="@+id/btnNap"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView14" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include
+        android:visibility="gone"
         android:id="@+id/layoutMine"
         layout="@layout/layout_mine"
         android:layout_width="0dp"
@@ -108,13 +147,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/textView16"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginTop="5dp"
         android:background="@color/text_color_white"
         android:gravity="center|start|center_horizontal"
-        android:text="TextView"
+        android:text="Help"
+        android:textSize="20sp"
+        android:fontFamily="@font/gilroy_bold"
+        android:drawablePadding="10dp"
+        android:paddingStart="10dp"
+        android:textColor="#000"
+        android:drawableStart="@drawable/ic_help"
+        android:drawableEnd="@drawable/ic_next_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
@@ -124,9 +172,16 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="5dp"
-        android:gravity="center|start|center_horizontal"
-        android:text="TextView"
         android:background="@color/text_color_white"
+        android:gravity="center|start|center_horizontal"
+        android:text="About"
+        android:textSize="20sp"
+        android:fontFamily="@font/gilroy_bold"
+        android:drawablePadding="10dp"
+        android:paddingStart="10dp"
+        android:textColor="#000"
+        android:drawableStart="@drawable/ic_about"
+        android:drawableEnd="@drawable/ic_next_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,13 +190,23 @@
     <TextView
         android:id="@+id/txtDangXuat"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="5dp"
-        android:gravity="center|start|center_horizontal"
-        android:text="Đăng xuất"
-        android:background="@color/text_color_white"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/background_btn_search"
+        android:drawableStart="@drawable/ic_logout"
+        android:fontFamily="@font/gilroy_bold"
+        android:gravity="center"
+        android:paddingStart="20dp"
+        android:text="Log out"
+        android:paddingVertical="10dp"
+        android:textColor="#53B175"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
