--- a/app/src/main/res/layout/layout_mine.xml
+++ b/app/src/main/res/layout/layout_mine.xml
@@ -36,7 +36,10 @@
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/background_btn_green"
-        android:text="Đăng nhập"
+        android:text="Login"
+        android:textSize="20sp"
+        android:fontFamily="@font/gilroy_bold"
+        android:textColor="@color/text_color_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
