--- a/app/src/main/res/xml/fragment_detail_chapter_xml_constraintlayout2_scene.xml
+++ b/app/src/main/res/xml/fragment_detail_chapter_xml_constraintlayout2_scene.xml
@@ -14,6 +14,13 @@
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
+        <Constraint
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintHorizontal_bias="1.0"
+            motion:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
