style(home): clean code
Xóa bỏ các khoảng trắng dư thừa,  sử dụng static cho các key

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -140,6 +140,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:tabGravity="fill"
                 app:tabMode="fixed"
+                app:tabIndicatorFullWidth="false"
                 app:tabSelectedTextColor="@color/green_color"
                 app:tabTextAppearance="@style/TextTabLayoutAppearance">
 
