--- a/app/src/main/res/layout/fragment_genre.xml
+++ b/app/src/main/res/layout/fragment_genre.xml
@@ -19,7 +19,7 @@
         tools:context=".ui.genre.GenreFragment">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/imgLogo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -49,7 +49,7 @@
             android:textColor="#7C7C7C"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycleViewGenreFragment"
