--- a/app/src/main/res/layout/item_recommended.xml
+++ b/app/src/main/res/layout/item_recommended.xml
@@ -11,13 +11,17 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <ImageView
             android:id="@+id/imgRecommended"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:profileImage="@{data.thumb}"
             android:scaleType="fitXY" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/background_image"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -26,7 +30,7 @@
             android:layout_gravity="bottom|end"
             android:gravity="center"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
             android:textColor="#fff"
             android:textSize="25sp"
             android:textStyle="bold"
