--- a/app/src/main/res/layout/layout_genre.xml
+++ b/app/src/main/res/layout/layout_genre.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -19,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:fontFamily="@font/gilroy_bold"
-            android:text="Genres"
+            android:text="@string/genres"
             android:textColor="#000"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
