--- a/app/src/main/res/layout/layout_manhua_home.xml
+++ b/app/src/main/res/layout/layout_manhua_home.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -21,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:fontFamily="@font/gilroy_bold"
-            android:text="Manhua"
+            android:text="@string/manhua"
             android:textColor="#000"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:fontFamily="@font/gilroy_bold"
-            android:text="See all"
+            android:text="@string/see_all"
             android:textColor="@color/green_color"
             android:textSize="19sp"
             app:layout_constraintEnd_toEndOf="parent"
